fixed footer and sidebar, change sliding artcicles to fliping articles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,27 @@
         </ul>
       </div>
     </header>
-
+    <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <section class="sidebar">
+      <img class="max-w-20 h-10 pr-4" src="logos/EoF logo.png" alt="" />
+      <div>
+        <h1 class="text-center">More intresting stories</h1>
+        <ul>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+          <li><a href="#">article</a></li>
+        </ul>
+      </div>
+    </section>
     <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 lg:border-b">
       <div
@@ -132,12 +152,12 @@
         </div>
       </div>
     </section>
-    <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
+    <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section
       class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
     >
       <div class="flex flex-col lg:flex-row lg:gap-4">
-        <!-- edito++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <!-- edito-------------------------------------------------- -->
         <div class="group flex flex-col items-center my-0.5 border-b lg:w-1/4">
           <h1 class="text-2xl underline my-0">Editorial</h1>
           <p class="hidden max-md:group-hover:block md:block">
@@ -230,43 +250,80 @@
           </p>
           <i class="author">author</i>
         </div>
-        <!-- SLIDING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <!-- FLIPING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
           class="overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
         >
-          <!-- sliding   article-------------------------------------- -->
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
-          <!-- sliding   article-------------------------------------- -->
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
-          <!-- sliding   article-------------------------------------- -->
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
-          <!-- sliding   article-------------------------------------- -->
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
-          <!-- sliding   article-------------------------------------- -->
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
-          <a class="sliding-article" href="#">
-            <h3>Bob tells the story of his alien abduction</h3>
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">
+                Bob tells the story of his alien abduction
+              </h3>
+              <div class="flip-card-back">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
           </a>
         </div>
       </div>
     </section>
-    <!-- SECONDARY CONTENT----------------------------------------------------------------------- -->
+    <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section
       class="flex flex-col items-center px-2 pb-1 mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
     >
@@ -330,8 +387,8 @@
               </h3>
             </a>
             <p class="text-sm">
-              Seriously I lost my watch. I was a golden Breitling worth 10.000$.
-              I think my boyfriend stole it...
+              Seriously I lost my watch. I was a golden Breitling worth
+              10.000$...
             </p>
             <i class="author mt-auto">I forgot</i>
           </div>
@@ -415,8 +472,8 @@
               </h3>
             </a>
             <p class="text-sm">
-              Seriously I lost my watch. I was a golden Breitling worth 10.000$.
-              I think my boyfriend stole it...
+              Seriously I lost my watch. I was a golden Breitling worth
+              10.000$...
             </p>
             <i class="author mt-auto">I forgot</i>
           </div>
@@ -443,25 +500,40 @@
         </div>
       </div>
     </section>
-    <footer
-      class="bg-[rgb(62,62,62)] w-full mt-4 py-4 flex justify-around content-center"
-    >
-      <a class="max-w-20 self-center" href="#"
+    <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <footer>
+      <a class="max-w-20 ml-4 self-center justify-center sm:max-w-40" href="#"
         ><img src="logos/EoF logo BW inverted.png" alt="ecko of the fox logo" />
-        <i class="text-center text-amber-50 font-stretch-50%">© eckofox</i>
+        <i class="w-full justify-self-center text-amber-50">© eckofox</i>
       </a>
-      <div
-        class="text-amber-50 self-center sm:flex flex-wrap sm:justify-between gap-4"
-      >
-        <a href="#">
-          <h4>About us</h4>
-        </a>
-        <a href="#">
-          <h4>Policies</h4>
-        </a>
-        <a href="#">
-          <h4>Legal</h4>
-        </a>
+      <div>
+        <div class="footer-list-appear">
+          <h2><a href="#">About us</a></h2>
+          <ul>
+            <li>Our History</li>
+            <li>The Team</li>
+            <li>Contact us</li>
+          </ul>
+        </div>
+        <div>
+          <h2><a href="#">Policies</a></h2>
+          <ul>
+            <li>Our History</li>
+            <li>The Team</li>
+            <li>Contact us</li>
+          </ul>
+        </div>
+        <div>
+          <h2><a href="#">Navigation</a></h2>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html">International</a></li>
+            <li><a href="/index.html">Domestic</a></li>
+            <li><a href="/index.html">Economy</a></li>
+            <li><a href="/index.html">Technology</a></li>
+            <li><a href="/index.html">Entertainment</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
