added title to editorial

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <!-- edito-------------------------------------------------- -->
         <div class="group flex flex-col items-center my-0.5 border-b lg:w-1/4">
           <h1 class="text-2xl underline my-0">Editorial</h1>
+          <h2>Title</h2>
           <p class="hidden max-md:group-hover:block md:block">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
             possimus ad earum! Eum rem perspiciatis quasi provident non tempore
