added dated and title format, added filler content

--- a/index.html
+++ b/index.html
@@ -158,41 +158,82 @@
     >
       <div class="flex flex-col lg:flex-row lg:gap-4">
         <!-- edito-------------------------------------------------- -->
-        <div class="group flex flex-col items-center my-0.5 border-b lg:w-1/4">
+        <div
+          class="group flex flex-col items-center my-0.5 p-1 border-b lg:w-1/4 lg:border-b-0 lg:border-r"
+        >
+          <div
+            style="
+              font-size: small;
+              font-style: italic;
+              justify-self: baseline;
+              align-self: baseline;
+            "
+          >
+            March 31, 2025
+          </div>
           <h1 class="text-2xl underline my-0">Editorial</h1>
-          <h2>Title</h2>
+          <h2>Real news are unreal!</h2>
           <p class="hidden max-md:group-hover:block md:block">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
-            possimus ad earum! Eum rem perspiciatis quasi provident non tempore
-            similique aut fuga saepe aperiam! Modi velit deleniti ea facilis
-            harum! <br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Reprehenderit eum ut quibusdam accusamus officia eveniet at
-            consequatur, inventore vero! Quibusdam sit rerum quidem dicta amet
-            praesentium? Mollitia fugit hic eveniet?
+            In this, the inaugural edition of
+            <strong>The Ecko Of The Fox</strong>, we’re taking a hard look at
+            the absurdity of real news. In a world where "scientific studies
+            show" you can be "addicted to your smartphone" and "someone on
+            Twitter had a thought," it’s hard to tell what’s truly important or
+            real anymore.
+          </p>
+          <p>
+            Meanwhile, we’re busy reporting that a squirrel in Ohio was actually
+            caught on tape thinking about running for mayor. Sure, it’s more
+            grounded than the latest celebrity “relationship drama,” but don’t
+            let that fool you—there’s something deeper lurking beneath. Stay
+            tuned for more!
           </p>
           <i class="author hidden max-md:group-hover:block md:block"
-            >Frank the Fox</i
+            >by Chet Gepeto</i
           >
         </div>
         <!-- main article------------------------------------------- -->
         <div class="flex flex-col items-center content-center my-0.5 lg:w-3/4">
-          <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
-          <img class="max-h-36 lg:max-h-48" src="/logos/EoF logo.png" alt="" />
+          <div class="date-and-title">
+            <div>France, March 31, 2025</div>
+            <h2>
+              <a href="#">ILLEGAL ALIENS IN PARIS</a>
+            </h2>
+          </div>
+          <img
+            class="max-h-36 lg:max-h-64"
+            src="/photos/aliens_in_paris.jpg"
+            alt=""
+          />
           <p class="lg:columns-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
-            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
-            harum eius veniam nobis. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Voluptates ipsam sequi quisquam unde consequatur
-            nam adipisci iusto tempora. Praesentium, nam corrupti! <br />
-            Unde, iure sequi architecto nihil est provident tenetur nam? Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam
-            sequi quisquam unde consequatur nam adipisci iusto tempora.
-            Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
-            provident tenetur nam?
+            And they're hungry for baguettes! Yesterday at nine o'clock European
+            Standard Time, a UFO landed next to the Eiffel Tower in Paris,
+            France. The UFO was oddly shaped like the famous landmark, and it is
+            believed the flying saucer mistook le Champs de Mars for a landing
+            strip. Parisians and tourists alike ran for their lives as the
+            spaceship approached silently in the morning sky. <br />
+            President Macron has declared a state of emergency, and the area
+            surrounding the Eiffel Tower has been closed to the public.
+            <q
+              >At the moment, we don't want to take any actions that may seem
+              hostile to the aliens.</q
+            >
+            said the French president. <br />
+            In response, most French postal workers have gone on strike,
+            demanding the aliens' retirement age be set at 61 years old.
+            President Trump declared at a press conference yesterday evening
+            that it was typical for Europeans to allow mass immigration and that
+            the Eiffel Tower design was
+            <q>overrated, really ugly when you think about it.</q> <br />
+            Meanwhile, all the cats and dogs in the French capital have
+            disappeared, leading many to believe those aliens actually
+            <u>are</u> eating the pets. <br />
+            CNN reporter Cooper Andersson asked President Trump about his
+            thoughts on the subject: <q>Then they're probably Haitians!</q>, the
+            US president answered. <br />
+            More on this story in our next edition.
           </p>
-          <i class="author">author</i>
+          <i class="author"> by John Doe</i>
         </div>
       </div>
       <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -201,55 +242,87 @@
         <div
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
-          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <div class="date-and-title">
+            <div>U.K, March 31, 2025</div>
+            <h2>
+              <a href="#">Freddy cloned, Queen to reunite</a>
+            </h2>
+          </div>
           <p>
             <img
-              class="max-w-[40%] max-h-24 float-left"
-              src="/logos/EoF logo.png"
-              alt=""
+              class="max-w-[50%] max-h-24 float-left px-1"
+              src="/photos/freddy_mercury.webp"
+              alt="Freddy Mercury"
             />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
-            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
-            harum eius veniam nobis.
+            The shocking announcement was made yesterday by guitarist Roger
+            Taylor. The company responsible for the cloning of the Polly and
+            Dolly sheeps in the 90's has cloned the late rock star. Fans are
+            thrilled as the band will reunite as soon as the cloned fetus is
+            born, has learnt to walk, talk, sing and grown chest hair.
           </p>
-          <i class="author">author</i>
+          <i class="author"> by Bob Rock</i>
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
-          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <div class="date-and-title">
+            <div>U.K, March 31, 2025</div>
+            <h2><a href="#">Danmark to cede Greenland to Panama</a></h2>
+          </div>
           <p>
             <img
-              class="max-w-[40%] max-h-24 float-left"
-              src="/logos/EoF logo.png"
+              class="max-w-[50%] max-h-24 float-left px-1"
+              src="/photos/panana_greenland.png"
               alt=""
             />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
-            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
-            harum eius veniam nobis.
+            Tired of the insistence coming from the White House, Denmark and
+            Panama have agreed to the cession of Greenland to the Central
+            American state. The move is in direct opposition to President
+            Trump’s earlier announcement to annex Greenland
+            <q>by any means</q> this year. <br />
+            Meanwhile, Canada has expressed interest in running the Panama Canal
+            free of charge. José Raúl Mulino, President of Panama, is
+            considering the offer.
           </p>
-          <i class="author">author</i>
+          <i class="author">by Gerard Buttler</i>
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
         >
-          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <div class="date-and-title">
+            <div>EoF office, March 31, 2025</div>
+            <h2><a href="#">We tried NeuralLink!</a></h2>
+          </div>
           <p>
-            <img
-              class="max-w-[40%] max-h-24 float-left"
-              src="/logos/EoF logo.png"
-              alt=""
-            />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
-            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
-            harum eius veniam nobis.
+            <svg
+              class="max-w-[50%] max-h-24 float-left mt-4"
+              width="56"
+              height="35"
+              viewBox="0 0 56 35"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="_logo_u5k48_26"
+            >
+              <path
+                fill="black"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M30.8777 22.4886H0.705078L22.5011 2.28693C24.3585 0.565492 27.0293 -0.000275522 29.47 0.809903C31.9102 1.62058 33.6439 3.6498 33.994 6.10498L37.476 30.5019C37.5803 31.2306 38.0767 31.8049 38.8036 32.0367C39.5305 32.2696 40.2868 32.0946 40.8255 31.572L50.1712 22.4886H39.4676L39.1096 20.2688H55.7051L42.4717 33.131C41.6499 33.9302 40.5593 34.3566 39.4367 34.3566C38.9823 34.3566 38.5221 34.2862 38.073 34.1429C36.5143 33.6455 35.4074 32.3656 35.1842 30.8031L31.7021 6.40672C31.4673 4.75921 30.3499 3.45166 28.7127 2.90802C27.0759 2.36337 25.3548 2.72899 24.108 3.88365L6.42923 20.2688H30.5522L30.8777 22.4886Z"
+              ></path>
+            </svg>
+            Our reporter, DEI employee Roberta Frank, became paraplegic after a
+            terrible baking accident during the pandemic. Last month, NeuralLink
+            agreed to let her test the latest brain-computer interface. <br />
+            Everything worked great—Roberta was able to participate in our
+            Friday night after-work dodgeball tournaments and had even taken up
+            baking once again. Last week, while waiting in front of the coffee
+            machine, an update was pushed by NeuralLink. Since then, Roberta
+            hasn't moved. The computer chip is now waiting for Roberta to reboot
+            in order to finish the update.
           </p>
-          <i class="author">author</i>
+          <i class="author">Frank the Fox</i>
         </div>
         <!-- FLIPING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
@@ -262,7 +335,10 @@
                 Bob tells the story of his alien abduction
               </h3>
               <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <q
+                  >Me and the boys had a few beers then a light came down the
+                  road...</q
+                >
               </div>
             </div>
           </a>
@@ -270,10 +346,11 @@
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
               <h3 class="flip-card-front">
-                Bob tells the story of his alien abduction
+                Putin caught with russian blow up dolls
               </h3>
               <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                The dolls were hiding inside each others, read about this
+                survival story
               </div>
             </div>
           </a>
@@ -281,10 +358,20 @@
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
               <h3 class="flip-card-front">
-                Bob tells the story of his alien abduction
+                He bought a car and ended up on the moon
               </h3>
               <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Unexpected turn of events as Noël Q. tried to overtake a car.
+              </div>
+            </div>
+          </a>
+          <!-- fliping   article-------------------------------------- -->
+          <a class="flip-card" href="#">
+            <div class="flip-card-inner">
+              <h3 class="flip-card-front">Volvo to design safer spoon</h3>
+              <div class="flip-card-back">
+                The car manufacturer can't stand people getting brain freeze
+                anymore.
               </div>
             </div>
           </a>
@@ -292,32 +379,19 @@
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
               <h3 class="flip-card-front">
-                Bob tells the story of his alien abduction
+                Jonas L. suffers MRSA after sharing swimming fins
               </h3>
               <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                An unexplained medical mystery without clear foundable answers.
               </div>
             </div>
           </a>
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
-              <h3 class="flip-card-front">
-                Bob tells the story of his alien abduction
-              </h3>
+              <h3 class="flip-card-front">New Netflix serie maybe cancelled</h3>
               <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-            </div>
-          </a>
-          <!-- fliping   article-------------------------------------- -->
-          <a class="flip-card" href="#">
-            <div class="flip-card-inner">
-              <h3 class="flip-card-front">
-                Bob tells the story of his alien abduction
-              </h3>
-              <div class="flip-card-back">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Few investors believe in the Beverly Hills Robocop-project
               </div>
             </div>
           </a>
@@ -429,14 +503,15 @@
                 5
               </h1>
               <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
+                I'm looking forward to it!
               </h3>
             </a>
             <p class="text-sm mt-auto">
-              But I am old, so I'll say it again: the Earth is flatter than an
-              ironing board, I am not crazy...
+              When prime minister Mette Frederiksen announced we'd be sold to
+              Panama, I was happy. I am the only spanish speaking inuit in the
+              village..
             </p>
-            <i class="author">Grumpy Dwarf</i>
+            <i class="author">Qanilima, el hielo que se va</i>
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
@@ -449,12 +524,13 @@
                 6
               </h1>
               <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                I like to move it, move it...
+                God is real, his name is Bob
               </h3>
             </a>
             <p class="text-sm mt-auto">
-              I like to move it, move it. I like to move it, move it. I like to
-              move it!
+              The clarity of it all hit me last sunday. After a bottle of
+              absynth I saw Nicole Kidman as a fairy and she told me the
+              truth...
             </p>
             <i class="author">Secret Dentist</i>
           </div>
@@ -469,12 +545,13 @@
                 7
               </h1>
               <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                What time is it?
+                I remember meeting Elvis
               </h3>
             </a>
             <p class="text-sm">
-              Seriously I lost my watch. I was a golden Breitling worth
-              10.000$...
+              It was moonlit night at LAX last year. I was between connecting
+              flights and in the Emirate Airline lounge we bumped into each
+              other...
             </p>
             <i class="author mt-auto">I forgot</i>
           </div>
@@ -489,14 +566,14 @@
                 8
               </h1>
               <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                Heziekel 25:17
+                I kant spel 2 good
               </h3>
             </a>
             <p class="text-sm">
-              And you will know, my name is the lord when I lay my vengeance
-              upon you
+              Mi ont sarA seys ei nid to learn hauw too writte ei shoold lissen
+              too heur becose shi eez mi moder too...
             </p>
-            <i class="author mt-auto">Jules V.</i>
+            <i class="author mt-auto">Deliverance</i>
           </div>
         </div>
       </div>
