--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </svg>
         <ul>
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/index.html">International</a></li>
+          <li><a href="/international.html">International</a></li>
           <li><a href="/index.html">Domestic</a></li>
           <li><a href="/index.html">Economy</a></li>
           <li><a href="/index.html">Technology</a></li>
@@ -605,7 +605,7 @@
           <h2><a href="#">Navigation</a></h2>
           <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/index.html">International</a></li>
+            <li><a href="/international.html">International</a></li>
             <li><a href="/index.html">Domestic</a></li>
             <li><a href="/index.html">Economy</a></li>
             <li><a href="/index.html">Technology</a></li>
