massive commit to finish work for review, mostly content creation and sidebar styling

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <ul>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/international.html">International</a></li>
-          <li><a href="/index.html">Domestic</a></li>
-          <li><a href="/index.html">Economy</a></li>
-          <li><a href="/index.html">Technology</a></li>
-          <li><a href="/index.html">Entertainment</a></li>
+          <li><a href="/domestic.html">Domestic</a></li>
+          <li><a href="/economy.html">Economy</a></li>
+          <li><a href="/tech.html">Technology</a></li>
+          <li><a href="/entertainment.html">Entertainment</a></li>
         </ul>
       </div>
     </header>
@@ -58,19 +58,87 @@
       <img class="max-w-20 h-10 pr-4" src="logos/EoF logo.png" alt="" />
       <div>
         <h1 class="text-center">More intresting stories</h1>
-        <ul>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
-          <li><a href="#">article</a></li>
+        <ul class="text-right">
+          <li>
+            <a href="/international.html"
+              >Joe Rogan to run in 2028 US election</a
+            >
+          </li>
+          <li><a href="tech.html">We tried NeuralLink!</a></li>
+          <li>
+            <a href="economy.html"
+              >The Rollercoaster of Financial Genius and Outrageous
+              Predictions</a
+            >
+          </li>
+          <li>
+            <a href="international.html"
+              >Putin caught with russian blow up dolls</a
+            >
+          </li>
+          <li>
+            <a href="domestic.html"
+              >Stockholm's Drinking Water to Come from Harbour</a
+            >
+          </li>
+          <li>
+            <a href="tech.html">WhatsApp to be used among CIA agents</a>
+          </li>
+          <li>
+            <a href="domestic.html">Annexation to Danmark still ongoing</a>
+          </li>
+          <li>
+            <a href="international.html">Australia to save the great reef</a>
+          </li>
+          <li>
+            <a href="domestic.html"
+              >Dad jokes can lower your child's life span</a
+            >
+          </li>
+          <li><a href="economy.html">Mars Travel on the rise</a></li>
+          <li>
+            <a href="international.html">Danmark to cede Greenland to Panama</a>
+          </li>
+          <li>
+            <a href="entertainment.html">New Fast and The Furious Movie</a>
+          </li>
+          <li><a href="domestic.html">Therapy Sessions for Penguins</a></li>
+          <li>
+            <a href="international.html">Bears Run for Local Elections</a>
+          </li>
+          <li>
+            <a href="entertainment.html"
+              >Taylor Swift Marries Swedish Ping Pong Champion</a
+            >
+          </li>
+          <li>
+            <a href="international.html"
+              >Working conditions in factories to be improved</a
+            >
+          </li>
+          <li>
+            <a href="entertainment.html"
+              >Pet Whale Drops Third Album on Spotify</a
+            >
+          </li>
+          <li>
+            <a href="economy.html">New start up selling elephant milk</a>
+          </li>
+          <li>
+            <a href="entertainment.html"
+              >Daniel Craig to Play Chef in New Film</a
+            >
+          </li>
+          <li><a href="international.html">Moonlit Cats In Rome</a></li>
+          <li><a href="international.html">Illegal Aliens In Paris</a></li>
+          <li>
+            <a href="economy.html">Musk to Manufacture Digital Condoms</a>
+          </li>
+          <li>
+            <a href="domestic.html"
+              >Esrange developps weapon against Paris' aliens</a
+            >
+          </li>
         </ul>
       </div>
     </section>
@@ -267,7 +335,7 @@
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <div class="date-and-title">
-            <div>U.K, March 31, 2025</div>
+            <div>Danmark, March 31, 2025</div>
             <h2><a href="#">Danmark to cede Greenland to Panama</a></h2>
           </div>
           <p>
@@ -606,10 +674,10 @@
           <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/international.html">International</a></li>
-            <li><a href="/index.html">Domestic</a></li>
-            <li><a href="/index.html">Economy</a></li>
-            <li><a href="/index.html">Technology</a></li>
-            <li><a href="/index.html">Entertainment</a></li>
+            <li><a href="/domestic.html">Domestic</a></li>
+            <li><a href="/economy.html">Economy</a></li>
+            <li><a href="/tech.html">Technology</a></li>
+            <li><a href="/entertainment.html">Entertainment</a></li>
           </ul>
         </div>
       </div>
