fixed bottom border on weather appearing at lg: instead of sm:

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     </section>
     <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-    <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 lg:border-b">
+    <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 sm:border-b">
       <div
         class="hidden md:flex flex-wrap w-full justify-around items-center gap-1 my-0.5"
       >
@@ -249,7 +249,7 @@
             Twitter had a thought," it’s hard to tell what’s truly important or
             real anymore.
           </p>
-          <p>
+          <p class="hidden max-md:group-hover:block md:block">
             Meanwhile, we’re busy reporting that a squirrel in Ohio was actually
             caught on tape thinking about running for mayor. Sure, it’s more
             grounded than the latest celebrity “relationship drama,” but don’t
