fixed issue in footer (copyright not centered)

--- a/economy.html
+++ b/economy.html
@@ -515,9 +515,15 @@
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
-      <a class="max-w-20 ml-4 self-center justify-center sm:max-w-40" href="#"
-        ><img src="logos/EoF logo BW inverted.png" alt="ecko of the fox logo" />
-        <i class="w-full justify-self-center text-amber-50">© eckofox</i>
+      <a
+        class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40"
+        href="#"
+        ><img
+          class="mx-auto"
+          src="logos/EoF logo BW inverted.png"
+          alt="ecko of the fox logo"
+        />
+        <i>© eckofox 2025</i>
       </a>
       <div>
         <div class="footer-list-appear">
