--- a/entertainment.html
+++ b/entertainment.html
@@ -539,14 +539,33 @@
               <i>Love in the Ruins</i>.
             </p>
           </div>
+
+          <!-- quick title-------------------------------------------- -->
+          <div
+            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+          >
+            <div class="date-and-title">
+              <div>Tokyo, April 1, 2025</div>
+              <h2>
+                <a href="#">Freddy Cloned, Queen To Reunite</a>
+              </h2>
+            </div>
+            <p>The band is looking forward to a concert in 2045.</p>
+          </div>
         </section>
       </section>
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
-      <a class="max-w-20 ml-4 self-center justify-center sm:max-w-40" href="#"
-        ><img src="logos/EoF logo BW inverted.png" alt="ecko of the fox logo" />
-        <i class="w-full justify-self-center text-amber-50">© eckofox</i>
+      <a
+        class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40"
+        href="#"
+        ><img
+          class="mx-auto"
+          src="logos/EoF logo BW inverted.png"
+          alt="ecko of the fox logo"
+        />
+        <i>© eckofox 2025</i>
       </a>
       <div>
         <div class="footer-list-appear">
