--- a/tech.html
+++ b/tech.html
@@ -344,7 +344,7 @@
             <a class="flip-card" href="#">
               <div class="flip-card-inner">
                 <h3 class="flip-card-front">
-                  Mobile phones are bd for you kids
+                  Mobile phones are bad for you kids
                 </h3>
                 <div class="flip-card-back">
                   Seriously though, stop letting your kids spend hours on their
